v2.7.8 + delete clientId and clientSecret from .env + register auth platform using portail
