# src/swagger/swagger.json
@@ -335,6 +335,9 @@
 					},
 					"urlAdmin": {
 						"type": "string"
+					},
+					"clientId": {
+						"type": "string"
 					}
 				},
 				"required": [
@@ -344,6 +347,30 @@
 					"statusPlatform",
 					"address",
 					"tokenPamToAdmin"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IAdmin": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"urlAdmin": {
+						"type": "string"
+					},
+					"clientId": {
+						"type": "string"
+					},
+					"clientSecret": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"urlAdmin",
+					"clientId",
+					"clientSecret"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -373,7 +400,8 @@
 					401,
 					403,
 					404,
-					500
+					500,
+					302
 				],
 				"type": "number"
 			},
@@ -2418,6 +2446,57 @@
 										"$ref": "#/components/schemas/IOAuth2Credential"
 									}
 								]
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/v1/register_admin": {
+			"post": {
+				"operationId": "RegisterToAdmin",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/IPamCredential"
+										},
+										{
+											"properties": {
+												"message": {
+													"type": "string"
+												}
+											},
+											"required": [
+												"message"
+											],
+											"type": "object"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/IAdmin"
 							}
 						}
 					}
